# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\AuthControllerApi;
+use App\Http\Controllers\API\TransactionControllerApi;
 use App\Http\Middleware\DisableSwaggerCsrf;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -13,5 +14,10 @@ Route::middleware('api')->group(function () {
     Route::post('/auth/login', [AuthControllerApi::class, 'login']);
 
 
-    Route::middleware('auth:api')->post('/auth/logout', [AuthControllerApi::class, 'logout']);
+    Route::middleware('auth:api')->group(function () {
+        Route::post('/auth/logout', [AuthControllerApi::class, 'logout']);
+
+        // Rota de transferência
+        Route::post('/transactions/transfer', [TransactionControllerApi::class, 'transfer']);
+    });
 });
